tests/topvar_initializer_cycle_unused_bad.stderr
tests/topvar_initializer_cycle_unused_bad.hop:4:1: error: HOP2004: type mismatch: cyclic top-level initializer dependency
