tests/topvar_initializer_cycle_unused_bad.hop
// Verifies topvar initializer cycle unused is rejected.
var A = B

var B = A

fn main() {}
